Workaround: make it usable with rebar3.

--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,8 @@
 {erl_opts, [debug_info, fail_on_warning, {platform_define, "^[0-9]+", namespaced_types}]}.
 {clean_files, ["logs", "build", "include/hamcrest.hrl"]}.
 
-{plugin_dir, "priv/build/plugins"}.
-{plugins, [header_generator, eqc_resolver]}.
+%{plugin_dir, "priv/build/plugins"}.
+%{plugins, [header_generator, eqc_resolver]}. -- Does not work with rebar3.
 
 {xref_checks, []}.
 {xref_queries,
